--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.application.name=codelap_spring_project
 
-spring.datasource.url=jdbc:oracle:thin:@192.168.0.21:1521:xe
-spring.datasource.username=bae
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+#spring.datasource.url=jdbc:oracle:thin:@3.143.252.195:1521:xe
+#spring.datasource.url=jdbc:oracle:thin:@192.168.0.21:1521:xe
+spring.datasource.username=garage
+#spring.datasource.username=bae
 spring.datasource.password=1111
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 # active=local? ?? ??? ??? ??
@@ -24,4 +27,4 @@ mybatis.mapper-locations=classpath:mybatis/mappers/*.xml
 app.jwtSecret=your_secret_key_here
 app.jwtExpirationInMs=3600000
 
-cors.allowed-origins=http://localhost:3001,http://localhost:3000
+cors.allowed-origins=http://localhost:3001,http://localhost:3000,http://192.168.0.144:3000
